--- a/style.css
+++ b/style.css
@@ -100,6 +100,16 @@ h3{
 article{
   max-width: 900px;
 }
+.image-zoom{
+  overflow: hidden;
+  cursor: pointer;
+}
+.image-zoom img{
+  transition: transform 0.5s;
+}
+.image-zoom:hover img{
+  transform: scale(1.2);
+}
 .flotan{
   float: left;
   margin: 10px;
